--- a/src/StudyPomo.UI/Areas/Identity/Pages/Onboarding/_OnboardingLayout.cshtml
+++ b/src/StudyPomo.UI/Areas/Identity/Pages/Onboarding/_OnboardingLayout.cshtml
@@ -41,30 +41,31 @@
     <!-- Hidden input to store the client's timezone -->
     <input type="hidden" id="timezone-input" name="ianaTimeZone" value="test">
     <div class="content-wrapper">
+        <nav class="navbar navbar-expand-md bg-body border-bottom border-1">
+            <div class="container">
+                <div class="d-flex align-items-center">
+                    <a class="navbar-brand d-none d-md-block" asp-page="/Manage/Index" style="padding-left: 0.6rem">
+                        <h4 :class="theme == 'dark' ? 'text-light' : 'text-dark'">studypomo</h4>
+                    </a>
+                </div>
+                <div class="d-flex align-items-center">
+                    <partial name="_LoginPartial" />
+                    <span class="ms-3 me-2">/</span>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+                                <button id="logout" type="submit" class="nav-link w-100 fw-semibold text-start">
+                                    Logout
+                                </button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div class="container-fluid">
             <div class="row flex-nowrap">
-                <!-- Main content -->
                 <div class="col">
-                    <header>
-                        <nav class="navbar navbar-expand-md mb-4 mt-1">
-                            <div class="container">
-                                <div class="d-flex align-items-center">
-                                    @if (SignInManager.IsSignedIn(User))
-                                    {
-                                        <div :class="pinned ? 'd-block d-md-none' : 'd-block'" class="border rounded-2 me-3" style="padding: 0.1rem 0.4rem" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas" aria-controls="navOffcanvas">
-                                            <i class="bi bi-list" style="font-size: 1.2rem"></i>
-                                        </div>
-                                    }
-                                    <a class="navbar-brand d-none d-md-block" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Manage/Index">
-                                        <h4>studypomo</h4>
-                                    </a>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <partial name="_LoginPartial" />
-                                </div>
-                            </div>
-                        </nav>
-                    </header>
                     <main role="main" class="container-sm">
                         @RenderBody()
                     </main>
