--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -69,7 +69,10 @@
             <!-- Sidebar (hidden on smaller screens) -->
             @if (SignInManager.IsSignedIn(User))
             {
-                <div :class="pinned ? 'd-none d-md-flex flex-column' : 'd-none'" class="bg-body border-1 border-end" style="min-width: 275px">
+                <div :class="pinned ? 'd-none d-md-flex flex-column' : 'd-none'" class="bg-body border-1 border-end" style="min-width: 275px;">
+                    <div class="border-1 border-bottom p-3 px-4">
+                        <span x-on:click="pinned = false" class="text-muted" data-bs-dismiss="offcanvas" style="cursor: pointer;"><i class="bi bi-arrow-bar-left me-2"></i>Collapse</span>
+                    </div>
                     <div class="d-flex flex-column align-items-sm-start px-3 pt-3 mb-auto">
                         <div class="w-100">
                             <ul class="navbar-nav flex-grow-1">
@@ -130,9 +133,6 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="border-1 border-top p-3">
-                        <span x-on:click="pinned = false" data-bs-dismiss="offcanvas" style="cursor: pointer;"><i class="bi bi-arrow-bar-left me-2"></i>Collapse</span>
                     </div>
                 </div>
 
