Add additional top padding at larger viewports

--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -219,7 +219,7 @@
                             </div>
                         }
                     </header>
-                    <main role="main" class="container-sm p-4">
+                    <main role="main" class="container-sm p-4 pt-xxl-5">
                         @RenderBody()
                     </main>
                 </div>
