--- a/src/StudyPomo.UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/StudyPomo.UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col-12 col-lg-4 col-md-6">
+    <div class="col-12 col-lg-6 ">
         <h5 class="mb-4">Settings</h5>
 
         <form method="post" asp-page-handler="SaveSettings" class="mb-4" x-data="{ automatic: @Json.Serialize(Model.SetTimeZoneAutomatically) }">
