Fix text colour in courses table

--- a/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
@@ -88,10 +88,10 @@
                             </a>
                         </div>
                         <div class="d-none d-md-block col-md-5">
-                            <span>@course.Description</span>
+                            <span class="text-muted">@course.Description</span>
                         </div>
                         <div class="d-none d-lg-block col-md-2">
-                            <span>@(course.StudyTasks.Count) task(s)</span>
+                            <span class="text-muted">@(course.StudyTasks.Count) task(s)</span>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
                             @if (course.Archived)
