--- a/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
@@ -31,7 +31,7 @@
         </li>
         @foreach (var task in Model.StudyTasksPaginated)
         {
-            <li class="list-group-item">
+            <li class="list-group-item bg-hover">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5 d-flex flex-nowrap align-items-center">
