Add full datetime for due dates in a popover

--- a/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
@@ -31,7 +31,7 @@
         </li>
         @foreach (var task in Model.StudyTasksPaginated)
         {
-            <li class="list-group-item">
+            <li class="list-group-item bg-hover">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5 d-flex flex-nowrap align-items-center">
@@ -50,7 +50,7 @@
                             }
                         </div>
                         <div class="d-none d-md-block col-md-3">
-                            <deadline date="@task.Deadline"></deadline>
+                            <deadline date="@task.Deadline" display-tz="@Model.TimeZone.Id"></deadline>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
                             @if (task.TaskPriority != null)
