--- a/src/StudyPomo.UI/Pages/Manage/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Index.cshtml
@@ -318,7 +318,7 @@
                             }
                         </div>
                         <div class="d-none d-md-block col-md-4">
-                            <deadline date="@task.Deadline"></deadline>
+                            <deadline date="@task.Deadline" display-tz="@Model.TimeZone.Id"></deadline>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
                             @if (task.TaskPriority != null)
