--- a/src/StudyPomo.UI/Pages/Manage/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Index.cshtml
@@ -307,7 +307,7 @@
         </li>
         @foreach (var task in nextTasks)
         {
-            <li class="list-group-item">
+            <li class="list-group-item bg-hover">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5 d-flex flex-nowrap align-items-center">
